@@ -1,5 +1,7 @@
 1.2.0 to 1.2.1
 ----------------------------------------------------------------------
+- Fixed the Configure SNMP Data Collection per Interface UI to be
+  much faster and to handle null issnmpprimary values.
 - Initialize begin and end times in isTimeInOutage so days of week is
   properly handled when passing a date that's not 'now.' Bug 1170.
 - Reset TreeMap in last month top 20 outage calculations
